Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "neighborhood_markers None"
+    "neighborhood_markers =neighborhood_markers[1]"
    ]
   },
   {
